Stuff kilian did on my computer

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
     <profile>
       <id>publishing</id>
       <build>
+        <resources>
+          <resource>
+            <directory>main</directory>
+          </resource>
+        </resources>
         <plugins>
           <plugin>
             <artifactId>maven-gpg-plugin</artifactId>
