--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.amazon.alexa</groupId>
-	<artifactId>alexa-skills-kit</artifactId>
+	<groupId>com.nebby.grandmadown</groupId>
 	<packaging>jar</packaging>
 	<version>1.2</version>
 	<name>Alexa Skills Kit</name>
@@ -130,4 +129,5 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<artifactId>GrandmaDown</artifactId>
 </project>
